logs and swagger fix
