# docs/swagger.yaml
@@ -29,6 +29,11 @@ definitions:
       username:
         type: string
     type: object
+  auth.TokenResponse:
+    properties:
+      token:
+        type: string
+    type: object
   movie.Movie:
     properties:
       description:
@@ -42,6 +47,13 @@ definitions:
       title:
         type: string
     type: object
+  util.ErrorResponse:
+    properties:
+      code:
+        type: integer
+      message:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -51,13 +63,29 @@ info:
 paths:
   /actors:
     delete:
+      parameters:
+      - description: Account ID
+        in: query
+        name: id
+        required: true
+        type: integer
       responses:
         "200":
           description: Actor deleted
+          schema:
+            type: string
         "400":
           description: Bad request
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+        "404":
+          description: Actor not found
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal server error
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       security:
       - ApiKeyAuth: []
       summary: Delete an actor
@@ -73,8 +101,14 @@ paths:
             items:
               $ref: '#/definitions/actor.Actor'
             type: array
+        "404":
+          description: No actors found
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal server error
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       security:
       - ApiKeyAuth: []
       summary: Get list of actors
@@ -150,25 +184,23 @@ paths:
         "200":
           description: Successful authentication
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/auth.TokenResponse'
         "400":
           description: Invalid input data
           schema:
-            type: string
+            $ref: '#/definitions/util.ErrorResponse'
         "401":
           description: User not found or invalid credentials
           schema:
-            type: string
+            $ref: '#/definitions/util.ErrorResponse'
         "405":
           description: Only the POST method is allowed
           schema:
-            type: string
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Server error
           schema:
-            type: string
+            $ref: '#/definitions/util.ErrorResponse'
       summary: Authentication Processing
       tags:
       - Auth
@@ -179,6 +211,10 @@ paths:
           description: Movie deleted
         "400":
           description: Bad request
+        "404":
+          description: Movie not found
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal server error
       security:
